پیاده سازی جدول

--- a/src/table.html
+++ b/src/table.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>صفحه اصلی</title>
-  <link rel="stylesheet" href="/assets/css/pages/form.css" />
+  <link rel="stylesheet" href="/assets/css/pages/table.css" />
 </head>
 
 <body>
@@ -108,7 +108,174 @@
             </div>
           </header>
           <div class="section-body">
-            
+            <table class="table">
+              <thead>
+                <tr>
+                  <th><span>ردیف</span></th>
+                  <th><span>عنوان</span></th>
+                  <th><span>قیمت</span></th>
+                  <th><span>تاریخ ثبت</span></th>
+                  <th><span>کاربر سفارش دهنده</span></th>
+                  <th><span>توضیحات</span></th>
+                  <th><span>عملیات</span></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><span>۱</span></td>
+                  <td><span>عنوان سفارش در این مکان</span></td>
+                  <td><span>۷۸۸،۰۰۰</span></td>
+                  <td><span>۲۸ اردیبهشت</span></td>
+                  <td><span>محمد رعنایی نظام دوست</span></td>
+                  <td><span>لورم ایپسوم متن ساختگی با تولید سادگی</span></td>
+                  <td><span><a href="#" class="button button-danger">حذف</a></span></td>
+                </tr>
+                <tr>
+                  <td><span>۱</span></td>
+                  <td><span>عنوان سفارش در این مکان</span></td>
+                  <td><span>۷۸۸،۰۰۰</span></td>
+                  <td><span>۲۸ اردیبهشت</span></td>
+                  <td><span>محمد رعنایی نظام دوست</span></td>
+                  <td><span>لورم ایپسوم متن ساختگی با تولید سادگی</span></td>
+                  <td><span><a href="#" class="button button-danger">حذف</a></span></td>
+                </tr>
+                <tr>
+                  <td><span>۱</span></td>
+                  <td><span>عنوان سفارش در این مکان</span></td>
+                  <td><span>۷۸۸،۰۰۰</span></td>
+                  <td><span>۲۸ اردیبهشت</span></td>
+                  <td><span>محمد رعنایی نظام دوست</span></td>
+                  <td><span>لورم ایپسوم متن ساختگی با تولید سادگی</span></td>
+                  <td><span><a href="#" class="button button-danger">حذف</a></span></td>
+                </tr>
+                <tr>
+                  <td><span>۱</span></td>
+                  <td><span>عنوان سفارش در این مکان</span></td>
+                  <td><span>۷۸۸،۰۰۰</span></td>
+                  <td><span>۲۸ اردیبهشت</span></td>
+                  <td><span>محمد رعنایی نظام دوست</span></td>
+                  <td><span>لورم ایپسوم متن ساختگی با تولید سادگی</span></td>
+                  <td><span><a href="#" class="button button-danger">حذف</a></span></td>
+                </tr>
+                <tr>
+                  <td><span>۱</span></td>
+                  <td><span>عنوان سفارش در این مکان</span></td>
+                  <td><span>۷۸۸،۰۰۰</span></td>
+                  <td><span>۲۸ اردیبهشت</span></td>
+                  <td><span>محمد رعنایی نظام دوست</span></td>
+                  <td><span>لورم ایپسوم متن ساختگی با تولید سادگی</span></td>
+                  <td><span><a href="#" class="button button-danger">حذف</a></span></td>
+                </tr>
+                <tr>
+                  <td><span>۱</span></td>
+                  <td><span>عنوان سفارش در این مکان</span></td>
+                  <td><span>۷۸۸،۰۰۰</span></td>
+                  <td><span>۲۸ اردیبهشت</span></td>
+                  <td><span>محمد رعنایی نظام دوست</span></td>
+                  <td><span>لورم ایپسوم متن ساختگی با تولید سادگی</span></td>
+                  <td><span><a href="#" class="button button-danger">حذف</a></span></td>
+                </tr>
+                <tr>
+                  <td><span>۱</span></td>
+                  <td><span>عنوان سفارش در این مکان</span></td>
+                  <td><span>۷۸۸،۰۰۰</span></td>
+                  <td><span>۲۸ اردیبهشت</span></td>
+                  <td><span>محمد رعنایی نظام دوست</span></td>
+                  <td><span>لورم ایپسوم متن ساختگی با تولید سادگی</span></td>
+                  <td><span><a href="#" class="button button-danger">حذف</a></span></td>
+                </tr>
+                <tr>
+                  <td><span>۱</span></td>
+                  <td><span>عنوان سفارش در این مکان</span></td>
+                  <td><span>۷۸۸،۰۰۰</span></td>
+                  <td><span>۲۸ اردیبهشت</span></td>
+                  <td><span>محمد رعنایی نظام دوست</span></td>
+                  <td><span>لورم ایپسوم متن ساختگی با تولید سادگی</span></td>
+                  <td><span><a href="#" class="button button-danger">حذف</a></span></td>
+                </tr>
+                <tr>
+                  <td><span>۱</span></td>
+                  <td><span>عنوان سفارش در این مکان</span></td>
+                  <td><span>۷۸۸،۰۰۰</span></td>
+                  <td><span>۲۸ اردیبهشت</span></td>
+                  <td><span>محمد رعنایی نظام دوست</span></td>
+                  <td><span>لورم ایپسوم متن ساختگی با تولید سادگی</span></td>
+                  <td><span><a href="#" class="button button-danger">حذف</a></span></td>
+                </tr>
+                <tr>
+                  <td><span>۱</span></td>
+                  <td><span>عنوان سفارش در این مکان</span></td>
+                  <td><span>۷۸۸،۰۰۰</span></td>
+                  <td><span>۲۸ اردیبهشت</span></td>
+                  <td><span>محمد رعنایی نظام دوست</span></td>
+                  <td><span>لورم ایپسوم متن ساختگی با تولید سادگی</span></td>
+                  <td><span><a href="#" class="button button-danger">حذف</a></span></td>
+                </tr>
+                <tr>
+                  <td><span>۱</span></td>
+                  <td><span>عنوان سفارش در این مکان</span></td>
+                  <td><span>۷۸۸،۰۰۰</span></td>
+                  <td><span>۲۸ اردیبهشت</span></td>
+                  <td><span>محمد رعنایی نظام دوست</span></td>
+                  <td><span>لورم ایپسوم متن ساختگی با تولید سادگی</span></td>
+                  <td><span><a href="#" class="button button-danger">حذف</a></span></td>
+                </tr>
+                <tr>
+                  <td><span>۱</span></td>
+                  <td><span>عنوان سفارش در این مکان</span></td>
+                  <td><span>۷۸۸،۰۰۰</span></td>
+                  <td><span>۲۸ اردیبهشت</span></td>
+                  <td><span>محمد رعنایی نظام دوست</span></td>
+                  <td><span>لورم ایپسوم متن ساختگی با تولید سادگی</span></td>
+                  <td><span><a href="#" class="button button-danger">حذف</a></span></td>
+                </tr>
+                <tr>
+                  <td><span>۱</span></td>
+                  <td><span>عنوان سفارش در این مکان</span></td>
+                  <td><span>۷۸۸،۰۰۰</span></td>
+                  <td><span>۲۸ اردیبهشت</span></td>
+                  <td><span>محمد رعنایی نظام دوست</span></td>
+                  <td><span>لورم ایپسوم متن ساختگی با تولید سادگی</span></td>
+                  <td><span><a href="#" class="button button-danger">حذف</a></span></td>
+                </tr>
+                <tr>
+                  <td><span>۱</span></td>
+                  <td><span>عنوان سفارش در این مکان</span></td>
+                  <td><span>۷۸۸،۰۰۰</span></td>
+                  <td><span>۲۸ اردیبهشت</span></td>
+                  <td><span>محمد رعنایی نظام دوست</span></td>
+                  <td><span>لورم ایپسوم متن ساختگی با تولید سادگی</span></td>
+                  <td><span><a href="#" class="button button-danger">حذف</a></span></td>
+                </tr>
+                <tr>
+                  <td><span>۱</span></td>
+                  <td><span>عنوان سفارش در این مکان</span></td>
+                  <td><span>۷۸۸،۰۰۰</span></td>
+                  <td><span>۲۸ اردیبهشت</span></td>
+                  <td><span>محمد رعنایی نظام دوست</span></td>
+                  <td><span>لورم ایپسوم متن ساختگی با تولید سادگی</span></td>
+                  <td><span><a href="#" class="button button-danger">حذف</a></span></td>
+                </tr>
+              </tbody>
+            </table>
+            <!-- <div class="table">
+              <div class="table-header">
+                <div class="table-row">
+                  <span class="table-col"></span>
+                  <span class="table-col"></span>
+                  <span class="table-col"></span>
+                  <span class="table-col"></span>
+                  <span class="table-col"></span>
+                  <span class="table-col"></span>
+                  <span class="table-col"></span>
+                </div>
+              </div>
+              <div class="table-body">
+                <div class="table-row">
+
+                </div>
+              </div>
+            </div> -->
           </div>
         </section>
       </div>
