jyddvhjd nv shdnfhv

--- a/src/form.html
+++ b/src/form.html
@@ -28,62 +28,148 @@
 
     <div class="wrapper">
       <aside class="main-sidebar">
-        <div class="menu">
-          <div class="menu-item">
-            <a href="#" class="item-button">
-              <span class="item-icon"><img src="./assets/images/ic_view_module_24px.png" alt=""></span>
-              <span class="item-title">مدیریت کاربران</span>
-            </a>
-          </div>
-          <div class="menu-item has-badge active">
-            <a href="#" class="item-button">
-              <span class="item-icon"><img src="./assets/images/ic_call_to_action_24px.png" alt=""></span>
-              <span class="item-title">مدیریت کالا‌ها</span>
-              <span class="item-badge badge-success">۳</span>
-            </a>
-          </div>
-          <div class="menu-item">
-            <a href="#" class="item-button">
-              <span class="item-icon"><img src="./assets/images/ic_watch_later_24px.png" alt=""></span>
-              <span class="item-title">ارز‌های دیجیتال</span>
-            </a>
-          </div>
-          <div class="menu-item has-badge">
-            <a href="#" class="item-button">
-              <span class="item-icon"><img src="./assets/images/ic_brightness_high_24px.png" alt=""></span>
-              <span class="item-title">مدیریت اخبار</span>
-              <span class="item-badge badge-primary">۱۶</span>
-            </a>
-          </div>
-          <div class="menu-item has-submenu has-badge">
-            <a class="item-button">
-              <span class="item-icon"><img src="./assets/images/ic_subscriptions_24px.png" alt=""></span>
-              <span class="item-title">فروشگاه آنلاین</span>
-              <span class="item-badge badge-warning">۵</span>
-            </a>
-          </div>
-          <div class="menu-item has-submenu has-submenu">
-            <a class="item-button">
-              <span class="item-icon"><img src="./assets/images/ic_book_24px.png" alt=""></span>
-              <span class="item-title">لاگ‌های سیستم</span>
-            </a>
-            <div class="submenu">
-              <div class="submenu-item">
-                <a href="#" class="title">سرویس اعلانات</a>
-              </div>
-              <div class="submenu-item active">
-                <a href="#" class="title">لاگ‌های سیستم فروش</a>
-              </div>
-              <div class="submenu-item">
-                <a href="#" class="title">سیستم مانیتورینگ</a>
+        <div class="scroll-box">
+          <div class="menu">
+            <div class="menu-item">
+              <a href="#" class="item-button">
+                <span class="item-icon"><img src="./assets/images/ic_view_module_24px.png" alt=""></span>
+                <span class="item-title">مدیریت کاربران</span>
+              </a>
+            </div>
+            <div class="menu-item has-badge active">
+              <a href="#" class="item-button">
+                <span class="item-icon"><i class="icon-pause"></i></span>
+                <span class="item-title">مدیریت کالا‌ها</span>
+                <span class="item-badge badge-success">۳</span>
+              </a>
+            </div>
+            <div class="menu-item">
+              <a href="#" class="item-button">
+                <span class="item-icon"><img src="./assets/images/ic_watch_later_24px.png" alt=""></span>
+                <span class="item-title">ارز‌های دیجیتال</span>
+              </a>
+            </div>
+            <div class="menu-item">
+              <a href="#" class="item-button">
+                <span class="item-icon"><img src="./assets/images/ic_watch_later_24px.png" alt=""></span>
+                <span class="item-title">ارز‌های دیجیتال</span>
+              </a>
+            </div>
+            <div class="menu-item">
+              <a href="#" class="item-button">
+                <span class="item-icon"><img src="./assets/images/ic_watch_later_24px.png" alt=""></span>
+                <span class="item-title">ارز‌های دیجیتال</span>
+              </a>
+            </div>
+            <div class="menu-item">
+              <a href="#" class="item-button">
+                <span class="item-icon"><img src="./assets/images/ic_watch_later_24px.png" alt=""></span>
+                <span class="item-title">ارز‌های دیجیتال</span>
+              </a>
+            </div>
+            <div class="menu-item">
+              <a href="#" class="item-button">
+                <span class="item-icon"><img src="./assets/images/ic_watch_later_24px.png" alt=""></span>
+                <span class="item-title">ارز‌های دیجیتال</span>
+              </a>
+            </div>
+            <div class="menu-item">
+              <a href="#" class="item-button">
+                <span class="item-icon"><img src="./assets/images/ic_watch_later_24px.png" alt=""></span>
+                <span class="item-title">ارز‌های دیجیتال</span>
+              </a>
+            </div>
+            <div class="menu-item">
+              <a href="#" class="item-button">
+                <span class="item-icon"><img src="./assets/images/ic_watch_later_24px.png" alt=""></span>
+                <span class="item-title">ارز‌های دیجیتال</span>
+              </a>
+            </div>
+            <div class="menu-item">
+              <a href="#" class="item-button">
+                <span class="item-icon"><img src="./assets/images/ic_watch_later_24px.png" alt=""></span>
+                <span class="item-title">ارز‌های دیجیتال</span>
+              </a>
+            </div>
+            <div class="menu-item">
+              <a href="#" class="item-button">
+                <span class="item-icon"><img src="./assets/images/ic_watch_later_24px.png" alt=""></span>
+                <span class="item-title">ارز‌های دیجیتال</span>
+              </a>
+            </div>
+            <div class="menu-item">
+              <a href="#" class="item-button">
+                <span class="item-icon"><img src="./assets/images/ic_watch_later_24px.png" alt=""></span>
+                <span class="item-title">ارز‌های دیجیتال</span>
+              </a>
+            </div>
+            <div class="menu-item">
+              <a href="#" class="item-button">
+                <span class="item-icon"><img src="./assets/images/ic_watch_later_24px.png" alt=""></span>
+                <span class="item-title">ارز‌های دیجیتال</span>
+              </a>
+            </div>
+            <div class="menu-item">
+              <a href="#" class="item-button">
+                <span class="item-icon"><img src="./assets/images/ic_watch_later_24px.png" alt=""></span>
+                <span class="item-title">ارز‌های دیجیتال</span>
+              </a>
+            </div>
+            <div class="menu-item">
+              <a href="#" class="item-button">
+                <span class="item-icon"><img src="./assets/images/ic_watch_later_24px.png" alt=""></span>
+                <span class="item-title">ارز‌های دیجیتال</span>
+              </a>
+            </div>
+            <div class="menu-item">
+              <a href="#" class="item-button">
+                <span class="item-icon"><img src="./assets/images/ic_watch_later_24px.png" alt=""></span>
+                <span class="item-title">ارز‌های دیجیتال</span>
+              </a>
+            </div>
+            <div class="menu-item">
+              <a href="#" class="item-button">
+                <span class="item-icon"><img src="./assets/images/ic_watch_later_24px.png" alt=""></span>
+                <span class="item-title">ارز‌های دیجیتال</span>
+              </a>
+            </div>
+            <div class="menu-item has-badge">
+              <a href="#" class="item-button">
+                <span class="item-icon"><img src="./assets/images/ic_brightness_high_24px.png" alt=""></span>
+                <span class="item-title">مدیریت اخبار</span>
+                <span class="item-badge badge-primary">۱۶</span>
+              </a>
+            </div>
+            <div class="menu-item has-submenu has-badge">
+              <a class="item-button">
+                <span class="item-icon"><img src="./assets/images/ic_subscriptions_24px.png" alt=""></span>
+                <span class="item-title">فروشگاه آنلاین</span>
+                <span class="item-badge badge-warning">۵</span>
+              </a>
+            </div>
+            <div class="menu-item has-submenu has-submenu">
+              <a class="item-button">
+                <span class="item-icon"><img src="./assets/images/ic_book_24px.png" alt=""></span>
+                <span class="item-title">لاگ‌های سیستم</span>
+              </a>
+              <div class="submenu">
+                <div class="submenu-item">
+                  <a href="#" class="title">سرویس اعلانات</a>
+                </div>
+                <div class="submenu-item active">
+                  <a href="#" class="title">لاگ‌های سیستم فروش</a>
+                </div>
+                <div class="submenu-item">
+                  <a href="#" class="title">سیستم مانیتورینگ</a>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="menu-item">
-            <a href="#" class="item-button">
-              <span class="item-icon"><img src="./assets/images/ic_power_settings_new_24px.png" alt=""></span>
-              <span class="item-title">خروج</span>
-            </a>
+            <div class="menu-item">
+              <a href="#" class="item-button">
+                <span class="item-icon"><img src="./assets/images/ic_power_settings_new_24px.png" alt=""></span>
+                <span class="item-title">خروج</span>
+              </a>
+            </div>
           </div>
         </div>
       </aside>
