--- a/src/table.html
+++ b/src/table.html
@@ -35,7 +35,7 @@
         </div>
         <div class="menu-item has-badge active">
           <a href="#" class="item-button">
-            <span class="item-icon"><img src="./assets/images/ic_call_to_action_24px.png" alt=""></span>
+            <span class="item-icon"><i class="icon-pause"></i></span>
             <span class="item-title">مدیریت کالا‌ها</span>
             <span class="item-badge badge-success">۳</span>
           </a>
